samples/_failures_safe/1761617158_35fea2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d5ed7e44.c: In function ‘main’:
./samples/SAFE/__tmp_d5ed7e44.c:148:5: error: expected declaration or statement at end of input
  148 |     if (!perform_decompression(compressed.data, compressed.size, &decompressed)) {
      |     ^~
./samples/SAFE/__tmp_d5ed7e44.c:148:5: error: expected declaration or statement at end of input
